--- a/pages/style.css
+++ b/pages/style.css
@@ -1,10 +1,12 @@
-#image-grid .col-md-4 {
+#image-grid .col-md-4{
   margin-bottom: 20px;
 }
 
 #image-grid img {
-  width: 100%;
+  width: auto;
   height: auto;
+  margin-top: 20px;
+  
 
   cursor: pointer;
 }
@@ -14,4 +16,8 @@
   transition: all 0.1s ease-in-out;
 
   opacity: 0.9;
+}
+
+h4{
+  margin-top: 1rem;
 }
