padronizei o layout de todas as paginas

--- a/pages/style.css
+++ b/pages/style.css
@@ -27,7 +27,7 @@
   opacity: 0.9;
 }
 
-#backButton {
+button {
   padding: 8px 25px;
 
   border: 1px solid #000;
@@ -41,8 +41,12 @@
   user-select: none;
 }
 
-#backButton:hover {
+button :hover {
   opacity: 0.8;
 
   transform: scale(1.01);
+}
+
+label{ 
+  margin: 15px 35px;
 }
