--- a/pages/style.css
+++ b/pages/style.css
@@ -46,3 +46,29 @@
 
   transform: scale(1.01);
 }
+
+.about-center {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  height: 80vh;
+  margin: 20px;
+}
+
+.about-title {
+  color: #c9c0c0;
+  padding: 10px 0;
+  margin: 10px 0;
+}
+
+.names-project {
+  font: 20px;
+  color: #d8d8d8;
+  margin: 20px 0 0;
+}
+
+.about-text {
+  text-align: justify;
+  padding: 35px 100px;
+}
