--- a/pages/style.css
+++ b/pages/style.css
@@ -136,3 +136,27 @@ label {
   text-align: justify;
   padding: 35px 100px;
 }
+
+.expanded-image {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: none;
+  user-select: none;
+}
+
+.expanded-image.active {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.expanded-image img {
+  max-width: 90%;
+  max-height: 90%;
+  object-fit: contain;
+  cursor: pointer;
+}
